--- a/style/style.css
+++ b/style/style.css
@@ -222,6 +222,9 @@ section {
   background: #fff;
   font-style: normal;
   font-size: 24px;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .prefer_description span {
@@ -270,6 +273,8 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
