edited tariffs section

--- a/style/style.css
+++ b/style/style.css
@@ -769,6 +769,9 @@ section {
 }
 
 @media (max-width: 1420px) {
+  .tariff_item {
+    margin-bottom: 12px;
+  }
   .preferences_item {
     padding: 0;
   }
