--- a/style/style.scss
+++ b/style/style.scss
@@ -723,6 +723,10 @@ section {
 // ----------media---------------
 
 @media (max-width: 1420px) {
+   .tariff_item {
+       margin-bottom: 12px;
+   }
+
     .preferences_item {
       padding: 0; 
 
