edited gallery section in .css

--- a/style/style.scss
+++ b/style/style.scss
@@ -573,7 +573,7 @@ section {
       flex-wrap: wrap;
       width: 70vw;
       align-items: center;
-      margin: 0 10vw 0 10vw;
+      margin: 0 2vw 0 0;
   }
 
 .slick-track {
