--- a/style/style.css
+++ b/style/style.css
@@ -575,7 +575,7 @@ section {
 }
 
 .gallery .gallery-wrap {
-  width: 90%;
+  width: 96%;
   height: 70vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -594,6 +594,7 @@ section {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .gallery .gallery-wrap .autoplay div {
@@ -615,11 +616,11 @@ section {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 70vw;
+  width: 80vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 10vw 0 10vw;
+  margin: 0 2vw 0 0;
 }
 
 .slick-track {
