--- a/style/style.scss
+++ b/style/style.scss
@@ -536,16 +536,20 @@ section {
 .gallery {
     background: linear-gradient(347deg, rgba(243, 190, 218, 0.604826) 8%, rgba(239, 226, 243, 0.4) 53%, rgba(208, 201, 242, 0.5) 96%);
     padding: 0 0 80px 16px;
+    justify-content: center;
 
     .header_text {
         padding-left: 40px;
+        display: flex;
+        flex-wrap: wrap;
     }
 
-    .gallery-wrap {
+   .gallery-wrap {
         width: 90%; 
         height: 70vh;
         display: flex;
         align-items: center;
+        justify-content: center;
         flex-wrap: wrap;
 
         .autoplay {
@@ -597,7 +601,7 @@ section {
 }
 
 .slick-next {
-    margin: 0 0 0 -10vw;
+    margin: 0 0 0 -3vw;
 }
 
 .slick-prev::after {
@@ -794,20 +798,26 @@ section {
              }
       }  
 
-//   @media (max-width: 390px) {
-//     .slick-list {
-//         max-width: 200px;
-//       }
+  @media (max-width: 390px) {
+    .slick-prev, .slick-next {
+        font-size: 0;
+        height: 18px;
+        width: 18px;
+    }
 
-//       .slick-prev {
-//           margin-left: -20px;
-//       }
+        .slick-prev::after {
+            font-size: 18px;
+            left: 3px;
+            top: 0px;
+         }
+         
+         .slick-next::after {
+            font-size: 18px;
+            right: 3px;
+            top: 0px;
+    }  
+}     
 
-//       .autoplay-img {
-//         width: 60px;
-//          }
-//     }       
-
-
+ 
   
 
