--- a/style/style.scss
+++ b/style/style.scss
@@ -67,6 +67,7 @@ body {
 
 header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 28px 56px;
     border-radius: 25px 25px 0 0;
@@ -77,10 +78,12 @@ header {
     color: #4754eb;
     font-size: 18px;
     font-weight: 600;
+    display: inline;
 }
 
 .navigation {
     display: flex;
+    margin-top: 10px;
 }
 
 .menu ul li {
@@ -199,7 +202,7 @@ section {
 
 .preferences {
     background: linear-gradient(-188deg, rgba(250, 234, 240, 1) 0%, rgba(255, 255, 255, 1) 58%, rgba(212, 188, 231, 1) 100%);
-    font-weight: 500; 
+    font-weight: 500;
 }
 
 .preferences_background {
@@ -234,7 +237,7 @@ section {
 }
 
 .prefernces_head {
-    display: flex;  
+    display: flex;
 }
 
 .prefernces_head span {
@@ -544,13 +547,10 @@ section {
         flex-wrap: wrap;
     }
 
-   .gallery-wrap {
-        width: 90%; 
+    .gallery-wrap {
+        width: 90%;
+        margin: auto;
         height: 70vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
 
         .autoplay {
             display: -webkit-box;
@@ -560,35 +560,31 @@ section {
             -ms-flex-align: center;
             align-items: center;
 
-            div {
-                justify-content: center;
-
-                .autoplay-img {
-                    width: 25vw;
-                    align-self: center;
+              .autoplay-img {
+                    
+                    width: 80%;
                 }
-            }
-
         }
     }
 }
-  .slick-list {
-      display: flex;
-      flex-wrap: wrap;
-      width: 70vw;
-      align-items: center;
-      margin: 0 2vw 0 0;
-  }
+
+.slick-list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70vw;
+    margin: 0 auto;
+    align-items: center;
+}
 
 .slick-track {
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
-.slick-prev, .slick-next{
+.slick-prev,
+.slick-next {
     font-size: 0;
-    height: 36px; 
+    height: 36px;
     width: 36px;
     border-radius: 12%;
     position: relative;
@@ -596,22 +592,19 @@ section {
     border: none;
 }
 
-.slick-prev {
-    margin: 0 2vw 0 3vw;
+.draggable .slick-list {
+    padding: 0;
 }
 
-.slick-next {
-    margin: 0 0 0 -3vw;
-}
 
 .slick-prev::after {
-   content: "<";
-   color: #fff;
-   font-size: 30px;
-   position: absolute;
-   top: 2px;
-   left: 8px;
-   cursor: pointer;
+    content: "<";
+    color: #fff;
+    font-size: 30px;
+    position: absolute;
+    top: 2px;
+    left: 8px;
+    cursor: pointer;
 }
 
 .slick-next::after {
@@ -622,8 +615,8 @@ section {
     top: 2px;
     right: 8px;
     cursor: pointer;
- }
- 
+}
+
 /* -----------popup section------------ */
 
 .popup {
@@ -742,82 +735,65 @@ section {
 // ----------media---------------
 
 @media (max-width: 1420px) {
-   .tariff_item {
-       margin-bottom: 12px;
-   }
+    .tariff_item {
+        margin-bottom: 12px;
+    }
 
     .preferences_item {
-      padding: 0; 
+        padding: 0;
 
-      .prefernces_head {
-          span {
-            font-size: 20px;
-            align-items: center;
-          }
-      }
+        .prefernces_head {
+            span {
+                font-size: 20px;
+                align-items: center;
+            }
+        }
     }
-  } 
+}
 
-  @media (max-width: 934px) {
-      
+@media (max-width: 934px) {
+
     .preferences_item {
-      max-width: 90%;
+        max-width: 90%;
 
-      .prefernces_head span {
-          font-size: 16px;
-      }
-
-      .prefer_description {
-          font-size: 16px;
-      }
-    }
-  } 
-
-  @media (max-width: 720px) {
-    
-      .slick-prev {
-          margin-left: -5px;
-      }
-
-       .autoplay-img {
-           width: 20vw;
-           align-self: center;
-           }
-    }   
-    
-    @media (max-width: 520px) {
-      
-        .slick-list {
-            width: 60vw;
+        .prefernces_head span {
+            font-size: 16px;
         }
 
-         .autoplay-img {
-             width: 10vw;
-             align-self: center;
-             justify-self:center;
-             }
-      }  
+        .prefer_description {
+            font-size: 16px;
+        }
+    }
+}
 
-  @media (max-width: 390px) {
-    .slick-prev, .slick-next {
+@media (max-width: 660px) {
+
+    .slick-list {
+        width: 60vw;
+    }
+
+    .autoplay-img {
+        align-self: center;
+        justify-self: center;
+    }
+
+    .slick-prev,
+    .slick-next {
         font-size: 0;
         height: 18px;
         width: 18px;
     }
 
-        .slick-prev::after {
-            font-size: 18px;
-            left: 3px;
-            top: 0px;
-         }
-         
-         .slick-next::after {
-            font-size: 18px;
-            right: 3px;
-            top: 0px;
-    }  
-}     
+    .slick-prev::after {
+        font-size: 18px;
+        left: 3px;
+        top: 0px;
+    }
 
- 
-  
+    .slick-next::after {
+        font-size: 18px;
+        right: 3px;
+        top: 0px;
+    }
+}
 
