--- a/style/style.css
+++ b/style/style.css
@@ -571,7 +571,7 @@ section {
 
 .gallery {
   background: linear-gradient(347deg, rgba(243, 190, 218, 0.604826) 8%, rgba(239, 226, 243, 0.4) 53%, rgba(208, 201, 242, 0.5) 96%);
-  padding: 0 0 80px 16px;
+  padding: 0 16px 80px 16px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -587,7 +587,7 @@ section {
 }
 
 .gallery .gallery-wrap {
-  width: 90%;
+  width: 96%;
   margin: auto;
   height: 70vh;
 }
