--- a/style/style.scss
+++ b/style/style.scss
@@ -538,7 +538,7 @@ section {
 
 .gallery {
     background: linear-gradient(347deg, rgba(243, 190, 218, 0.604826) 8%, rgba(239, 226, 243, 0.4) 53%, rgba(208, 201, 242, 0.5) 96%);
-    padding: 0 0 80px 16px;
+    padding: 0 16px 80px 16px;
     justify-content: center;
 
     .header_text {
@@ -548,7 +548,7 @@ section {
     }
 
     .gallery-wrap {
-        width: 90%;
+        width: 96%;
         margin: auto;
         height: 70vh;
 
